# rate-evals

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
configs/: config.yaml
configs/dataset/: abd_ct_merlin.yaml  abd_ct_merlin_for_ctclip_model.yaml  abd_ct_merlin_for_merlin_model.yaml  dummy.yaml  rve_abd_ct.yaml  rve_brain_ct.yaml  rve_chest_ct.yaml
configs/model/: ctclip.yaml  lingshu.yaml  medgemma.yaml  medimageinsight.yaml  merlin.yaml  pillar0.yaml
data/merlin_example/: manifest.csv  train.json
data/rve_example/: manifest.csv
data/rve_example/volumes/EXAMPLE_ACCESSION/: metadata.json
rate_eval/: __init__.py  common.py  components.py  config.py  evaluation.py  hydra_config.py
rate_eval/cli/: __init__.py  evaluate.py  extract.py  main.py
rate_eval/datasets/: __init__.py  abd_ct_merlin.py  abd_ct_merlin_for_ctclip_model.py  abd_ct_merlin_for_merlin_model.py  dummy.py  rve_dataset.py  rve_utils.py
rate_eval/models/: __init__.py  common.py  ctclip.py  lingshu.py  medgemma.py  medimageinsight.py  merlin.py  pillar0.py
scripts/: analyze_auc.py
